# weston

./: .gitignore  Makefile.am  configure.ac
clients/: Makefile.am  desktop-shell.c  editor.c  eventdemo.c  fullscreen.c  input-devices.c  keyboard.c  presentation-shm.c  simple-damage.c  simple-dmabuf.c  simple-egl.c  simple-shm.c  tablet.c  weston-info.c  weston-simple-im.c  window.c  window.h
desktop-shell/: input-panel.c  shell.c
fullscreen-shell/: fullscreen-shell.c
ivi-shell/: input-panel-ivi.c
protocol/: Makefile.am  gestures.xml  input-device.xml  wayland-tablet.xml
shared/: cairo-util.h  frame.c
src/: Makefile.am  bindings.c  compositor-drm.c  compositor-fbdev.c  compositor-headless.c  compositor-rpi.c  compositor-wayland.c  compositor-x11.c  compositor.c  compositor.h  evdev-tablet.c  evdev-touchpad.c  evdev.c  evdev.h  gl-renderer.c  input-devices.c  input.c  libinput-device.c  libinput-device.h  linux-dmabuf.c  screen-share.c  screenshooter.c  text-backend.c  weston-launch.c
tests/: Makefile.am  config-parser-test.c  matrix-test.c  presentation-test.c  setbacklight.c  subsurface-test.c  surface-global-test.c  surface-test.c  text-test.c  weston-test-client-helper.c  weston-test-client-helper.h  weston-test-runner.c  weston-test-runner.h  weston-test.c  weston-tests-env  xwayland-test.c
